spacing fix for buttons

--- a/assets/css/sass/_forms.scss
+++ b/assets/css/sass/_forms.scss
@@ -26,6 +26,7 @@ a.button, input.button, input.submit, button.button, input[type="submit"], butto
     color:$black;
     padding: 6px 12px;
     margin-bottom: 0;
+    margin-top: 5px;
     font-weight: 400;
     line-height: 1.42857143;
     text-align: center;
